; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_hashtable.c_vmci_hashtable_release_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_hashtable.c_vmci_hashtable_release_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_hashtable = type { i32 }
%struct.vmci_hash_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_hashtable_release_entry(%struct.vmci_hashtable* %0, %struct.vmci_hash_entry* %1) #0 {
  %3 = alloca %struct.vmci_hashtable*, align 8
  %4 = alloca %struct.vmci_hash_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.vmci_hashtable* %0, %struct.vmci_hashtable** %3, align 8
  store %struct.vmci_hash_entry* %1, %struct.vmci_hash_entry** %4, align 8
  %6 = load %struct.vmci_hashtable*, %struct.vmci_hashtable** %3, align 8
  %7 = call i32 @ASSERT(%struct.vmci_hashtable* %6)
  %8 = load %struct.vmci_hashtable*, %struct.vmci_hashtable** %3, align 8
  %9 = getelementptr inbounds %struct.vmci_hashtable, %struct.vmci_hashtable* %8, i32 0, i32 0
  %10 = call i32 @vmci_grab_lock_bh(i32* %9)
  %11 = load %struct.vmci_hashtable*, %struct.vmci_hashtable** %3, align 8
  %12 = load %struct.vmci_hash_entry*, %struct.vmci_hash_entry** %4, align 8
  %13 = call i32 @vmci_hashtable_release_entry_locked(%struct.vmci_hashtable* %11, %struct.vmci_hash_entry* %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.vmci_hashtable*, %struct.vmci_hashtable** %3, align 8
  %15 = getelementptr inbounds %struct.vmci_hashtable, %struct.vmci_hashtable* %14, i32 0, i32 0
  %16 = call i32 @vmci_release_lock_bh(i32* %15)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @ASSERT(%struct.vmci_hashtable*) #1

declare dso_local i32 @vmci_grab_lock_bh(i32*) #1

declare dso_local i32 @vmci_hashtable_release_entry_locked(%struct.vmci_hashtable*, %struct.vmci_hash_entry*) #1

declare dso_local i32 @vmci_release_lock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
